[tool.poetry]
name = "fantasy-premier-league"
version = "0.1.0"
description = "Fantasy Prermier League stuff!"
authors = ["jb"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pre-commit = "^2.15.0"
isort = "^5.9.3"
flake8 = "^3.9.2"
black = "^21.9b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
